--- a/Client/UNO/package.json
+++ b/Client/UNO/package.json
@@ -14,7 +14,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "pinia": "^3.0.3",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -28,4 +30,3 @@
     "vue-tsc": "^3.0.4"
   }
 }
- 
