--- a/Client/UNO/package.json
+++ b/Client/UNO/package.json
@@ -14,6 +14,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.7",
+    "graphql": "^16.11.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
