--- a/Client/UNO/package.json
+++ b/Client/UNO/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "@apollo/client": "^4.0.7",
     "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.6",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.16.5",
+    "@types/node": "^22.18.10",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
