--- a/Server/package.json
+++ b/Server/package.json
@@ -1,26 +1,30 @@
 {
   "dependencies": {
-    "@apollo/server": "^4.12.2",
+    "@apollo/server": "^5.0.0",
     "@as-integrations/express4": "^1.1.2",
-    "@graphql-tools/schema": "^10.0.25",
-    "body-parser": "^2.2.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "graphql": "^16.11.0",
-    "graphql-subscriptions": "^3.0.0",
-    "graphql-ws": "^6.0.6",
-    "ws": "^8.18.3"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.7.2",
-    "@types/ws": "^8.18.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "name": "server",
+    "domain": "../domain",
+    "express": "^4.21.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
+    "ws": "^8.18.0"
+},
+"devDependencies": {
+  "@graphql-codegen/cli": "^5.0.7",
+  "@graphql-typed-document-node/core": "^3.2.0",
+  "@types/cors": "^2.8.19",
+  "@types/express": "^5.0.0",
+  "@types/ws": "^8.5.13",
+  "graphql": "^16.11.0",
+  "tsx": "^4.20.5"
+},
+
+"name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "ServerTest.js",
