--- a/Client/UNO/package.json
+++ b/Client/UNO/package.json
@@ -15,20 +15,25 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
+    "@reduxjs/toolkit": "^2.10.1",
     "graphql": "^16.11.0",
     "graphql-ws": "^6.0.6",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.10",
+    "@vitejs/plugin-react": "^5.1.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.8.0",
-    "vite": "^7.0.6",
+    "vite": "^7.2.2",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
   }
