--- a/Client/UNO/package.json
+++ b/Client/UNO/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+  "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+  "type-check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
@@ -29,12 +29,10 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.10",
     "@vitejs/plugin-react": "^5.1.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.7.0",
+  "@types/react": "^18.2.21",
+  "@types/react-dom": "^18.2.7",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.8.0",
-    "vite": "^7.2.2",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vue-tsc": "^3.0.4"
+    "vite": "^7.2.2"
   }
 }
