--- a/Domain/package.json
+++ b/Domain/package.json
@@ -20,6 +20,11 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "lodash": "^4.17.21"
+  }
+  ,
+  "devDependencies": {
+    "@types/lodash": "^4.14.192"
   }
 }
